[package]
name = "herb"
version = "0.1.0"
authors = ["Theodore Keloglou <zf@sirodoht.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "^1.0.0"
serde_bencode = "^0.2.1"
serde_derive = "^1.0.0"
serde_bytes = "0.10.0"
sha1 = "0.6.0"
